# q6-pi-build

./: .gitignore  README.md  docker-compose.yml  toolchain.cmake
docker/: Dockerfile.arm.pi4  Dockerfile.arm.pi5  Dockerfile.cross.pi4  Dockerfile.cross.pi5  Dockerfile.pi.template
examples/hello-2/: CMakeLists.txt  main.cpp
examples/qml-1/: CMakeLists.txt
scripts/: build_cross.sh  build_qt6.sh  build_target.sh  generate_dockerfiles.sh
